--- a/views/user/class8.ejs
+++ b/views/user/class8.ejs
@@ -456,6 +456,7 @@
           <li><strong>Time:</strong> 5:00 – 6:00 PM</li>
           <li><strong>Platform:</strong> Zoom</li>
           <li><strong>Includes:</strong> Interactive whiteboard, Recordings</li>
+           <li><strong>📘 Study Material:</strong> <a href="" target="_blank">Open PDF</a></li>
         </ul>
       </div>
     </div>
@@ -483,6 +484,8 @@
           <li><strong>Time:</strong> 6:00 – 7:00 PM</li>
           <li><strong>Platform:</strong> Google Meet</li>
           <li><strong>Includes:</strong> Virtual lab demonstrations</li>
+           <li><strong>📘 Study Material:</strong> <a href="" target="_blank">Open PDF</a></li>
+
         </ul>
       </div>
     </div>
@@ -510,6 +513,7 @@
           <li><strong>Time:</strong> 7:00 – 8:00 PM</li>
           <li><strong>Platform:</strong> Google Meet</li>
           <li><strong>Includes:</strong> Digital reading materials</li>
+           <li><strong>📘 Study Material:</strong> <a href="" target="_blank">Open PDF</a></li>
         </ul>
       </div>
     </div>
@@ -536,6 +540,7 @@
           <li><strong>Time:</strong> 4:00 – 5:00 PM</li>
           <li><strong>Platform:</strong> Zoom</li>
           <li><strong>Includes:</strong> Digital timelines, Interactive quizzes</li>
+          <li><strong>📘 Study Material:</strong> <a href="" target="_blank">Open PDF</a></li>
         </ul>
       </div>
     </div>
@@ -563,6 +568,7 @@
           <li><strong>Time:</strong> 3:30 – 4:30 PM</li>
           <li><strong>Platform:</strong> Zoom</li>
           <li><strong>Includes:</strong> Screen sharing, Code examples</li>
+           <li><strong>📘 Study Material:</strong> <a href="" target="_blank">Open PDF</a></li>
         </ul>
       </div>
     </div>
@@ -589,6 +595,7 @@
           <li><strong>Time:</strong> 3:30 – 4:30 PM</li>
           <li><strong>Platform:</strong> Zoom</li>
           <li><strong>Includes:</strong> Screen sharing, Code examples</li>
+           <li><strong>📘 Study Material:</strong> <a href="" target="_blank">Open PDF</a></li>
         </ul>
       </div>
     </div>
