--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -17,6 +17,7 @@
       <div class="footer-section col-md-4">
         <h4>Quick Links</h4>
         <ul>
+           <li><a href="/new_offer">New Offer</a></li>
           <li><a href="/">Home</a></li>
           <li><a href="/about">About Us</a></li>
           <li><a href="/courses">Courses</a></li>
