--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -20,7 +20,7 @@
 <body>
 
 <!-- ✅ Navbar Start -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm" style="height: 50px;">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm" style="height:70px;">
   <div class="container-fluid px-3">
     <a class="navbar-brand d-flex align-items-center" href="/">
       <img src="/Aniket2.png" alt="Logo"/>
@@ -31,6 +31,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarMenu">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-3">
+        <li class="nav-item"><a class="nav-link offer-link text-black px-3 rounded" href="/new_offer">🎉 New Offer</a></li>
         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
         <li class="nav-item"><a href="/courses" class="nav-link">Class & Courses</a></li>
